[gd_scene load_steps=7 format=3 uid="uid://b7ffejioelqqr"]

[ext_resource type="Script" uid="uid://cfj3ibdjguvbt" path="res://scenes/player.gd" id="1_mvpqy"]
[ext_resource type="Texture2D" uid="uid://b7e7la8o8r8ni" path="res://assets/sprites/rogues.png" id="2_1yqc4"]
[ext_resource type="Material" uid="uid://cpjixaqg8mhuy" path="res://resources/teleport_particles.tres" id="3_1yqc4"]

[sub_resource type="Gradient" id="Gradient_xo05s"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0470588, 0.0745098, 0.0901961, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1yqc4"]
gradient = SubResource("Gradient_xo05s")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7141"]
size = Vector2(8, 8)

[node name="PlayerContainer" type="Node2D" groups=["player_node"]]
script = ExtResource("1_mvpqy")

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
position = Vector2(-1.5974045e-05, 11.999996)
scale = Vector2(1.0624998, 231.99998)
texture = SubResource("GradientTexture1D_1yqc4")

[node name="PlayerSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_1yqc4")
region_enabled = true
region_rect = Rect2(32, 128, 32, 32)

[node name="WallDetection" type="Node2D" parent="."]

[node name="Down" type="RayCast2D" parent="WallDetection" groups=["player_rays"]]
target_position = Vector2(0, 12)
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="WallDetection" groups=["player_rays"]]
target_position = Vector2(12, 0)
collide_with_areas = true

[node name="Up" type="RayCast2D" parent="WallDetection" groups=["player_rays"]]
target_position = Vector2(0, -12)
collide_with_areas = true

[node name="Left" type="RayCast2D" parent="WallDetection" groups=["player_rays"]]
target_position = Vector2(-12, 0)
collide_with_areas = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_i7141")
debug_color = Color(0.967637, 3.85046e-07, 0.472992, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 12)
zoom = Vector2(0.8, 0.8)

[node name="TeleportParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 20
one_shot = true
explosiveness = 0.5
randomness = 0.5
local_coords = true
process_material = ExtResource("3_1yqc4")
